--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,21 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
 
-
-    
-<ul class="collapsible">
     {% for task in tasks %}
-	<li>
-		<div class="collapsible-header">
-            <i class="material-icons">expand_more</i><strong>{{task.task_name}}</strong> - {{task.due_date}}
-        </div>
-		<div class="collapsible-body">
-            <span>{{task.task_description}}</span>
-        </div>
-	</li>
-	{% endfor %}
-
-</ul>
-
+        {{ task.task_name }}<br>
+        {{ task.category_name }}<br>
+        {{ task.task_description }}<br>
+        {{ task.is_urgent }}<br>
+        {{ task.due_date }}<br>
+    {% endfor %}
 
 {% endblock %}
