--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -1,37 +1,42 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h3>Add Task</h3>
-<div class="row">
+<h3 class="deep-purple-text text-darken-4 center-align">Add Task</h3>
+<div class="row card-panel grey lighten-5">
 	<form action="" method="POST" class="col s12">
 		<div class="row">
 			<div class="input-field col s12">
-				<i class="material-icons prefix">assignment</i>
-				<input id="task_name" name="task_name" type="text" class="validate">
-				<label for="icon_prefix">Task Name</label>
+				<i class="fas fa-pencil-alt prefix deep-purple-text text-darken-4"></i>
+				<input id="task_name" name="task_name" minlength="5" maxlength="50"
+                type="text" class="validate" required>
+				<label for="task_name">Task Name</label>
 			</div>
 		</div>
 		<div class="row">
 			<div class="input-field col s12">
-				<i class="material-icons prefix">subject</i>
-				<textarea type="textarea" name="task_description" id="task_description" class="materialize-textarea"></textarea>
-				<label for="icon_telephone">Task Description</label>
+				<i class="fas fa-align-left prefix deep-purple-text text-darken-4"></i>
+				<textarea type="textarea" name="task_description" id="task_description"
+                minlength="5" maxlength="200" class="materialize-textarea validate" required></textarea>
+				<label for="task-description">Task Description</label>
 			</div>
 		</div>
-        <div class="row">
-			<div id="matfix" class="input-field col s12">
-				<i class="material-icons prefix">today</i>
-				<input id="due_date" name="due_date" type="text" class="datepicker">
+		<div class="row">
+			<div class="input-field col s12">
+				<i class="fas fa-calendar-alt prefix deep-purple-text text-darken-4"></i>
+				<input id="due_date" name="due_date" type="text" class="datepicker validate" required>
 				<label for="icon_prefix">Due Date</label>
 			</div>
 		</div>
 		<div class="row">
-			<div class="switch">
-				<label>
-                    <input id="is_urgent" name="is_urgent" type="checkbox">
-                    <span class="lever"></span>
-                    Is Urgent
+			<div class="input-field col s12">
+				<div class="switch">
+                    <i class="fas fa-exclamation-circle prefix deep-purple-text text-darken-4"></i>
+					<label>
+                        <input id="is_urgent" name="is_urgent" type="checkbox">
+                        <span class="lever"></span>
+                        Is Urgent
                 </label>
+				</div>
 			</div>
 		</div>
 	</form>
