--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -3,7 +3,8 @@
 
 <h3 class="deep-purple-text text-darken-4 center-align">Add Task</h3>
 <div class="row card-panel grey lighten-5">
-	<form action="" method="POST" class="col s12">
+	<form action="{{ url_for('add_task') }}" method="POST" class="col s12">
+        <!--category selector-->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-folder-open prefix deep-purple-text text-darken-4"></i>
@@ -16,6 +17,7 @@
                 <label for="category_name">Task Category</label>
             </div>
         </div>
+        <!--task name-->
 		<div class="row">
 			<div class="input-field col s12">
 				<i class="fas fa-pencil-alt prefix deep-purple-text text-darken-4"></i>
@@ -24,6 +26,7 @@
 				<label for="task_name">Task Name</label>
 			</div>
 		</div>
+        <!--task description-->
 		<div class="row">
 			<div class="input-field col s12">
 				<i class="fas fa-align-left prefix deep-purple-text text-darken-4"></i>
@@ -32,6 +35,7 @@
 				<label for="task-description">Task Description</label>
 			</div>
 		</div>
+        <!--due date picker-->
 		<div class="row">
 			<div class="input-field col s12">
 				<i class="fas fa-calendar-alt prefix deep-purple-text text-darken-4"></i>
@@ -39,6 +43,7 @@
 				<label for="icon_prefix">Due Date</label>
 			</div>
 		</div>
+        <!--is urgent toggle-->
 		<div class="row">
 			<div class="input-field col s12">
 				<div class="switch">
@@ -51,6 +56,14 @@
 				</div>
 			</div>
 		</div>
+        <!--submit button-->
+        <div class="row">
+            <div class="col s12 center-align">
+                <button type="submit" class="btn-large deep-purple darken-1 text-shadow">
+                    Add Task <i class="fas fa-plus-square right"></i>
+                </button>
+            </div>
+        </div>
 	</form>
 </div>
 
