--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -40,7 +40,7 @@
 			<div class="input-field col s12">
 				<i class="fas fa-calendar-alt prefix deep-purple-text text-darken-4"></i>
 				<input id="due_date" name="due_date" type="text" class="datepicker validate" required>
-				<label for="icon_prefix">Due Date</label>
+				<label for="due_date">Due Date</label>
 			</div>
 		</div>
         <!--is urgent toggle-->
