--- a/templates/categories.html
+++ b/templates/categories.html
@@ -4,6 +4,14 @@
     <h3 class="deep-purple-text text-darken-4 center-align">Manage Categories</h3>
 
     <div class="row">
+        <div class="col s12 center-align">
+            <a href="{{ url_for('add_category') }}" class="btn-large deep-purple darken-2 text-shadow">
+                Add Category <i class="fas fa-plus-square right"></i>
+            </a>
+        </div>
+    </div>
+
+    <div class="row">
         {% for category in categories %}
             <div class="col s12 m4">
                 <div class="card deep-purple darken-4 text-shadow center-align">
