--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -32,7 +32,7 @@
 				<i class="fas fa-align-left prefix deep-purple-text text-darken-4"></i>
 				<textarea type="textarea" name="task_description" id="task_description"
                 minlength="5" maxlength="200" class="materialize-textarea validate" required></textarea>
-				<label for="task-description">Task Description</label>
+				<label for="task_description">Task Description</label>
 			</div>
 		</div>
         <!--due date picker-->
